# profile-extraction-chatbot

./: Dockerfile  README.md  pyproject.toml
src/profile_extraction_chatbot/: constants.py  main.py  schemas.py
src/static/: index.html
tests/: test_completeness_score.py
