[tool.poetry]
name = "profile-extraction-chatbot"
version = "0.1.0"
description = "AI chatbot that extracts user profile information based on a conversation."
authors = ["\"Alin Mihaila\" <\"alin.mh996@gmail.com\">"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "profile_extraction_chatbot", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
websockets = "^14.1"
pydantic-ai = "^0.0.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
