[project]
name = "profile-extraction-chatbot"
version = "0.1.0"
description = "AI chatbot that extracts user profile information based on a conversation."
authors = []
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "pydantic-ai>=0.0.9",
    "uvicorn>=0.32.1",
    "websockets>=14.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
